[package]
name = "pgrx-catalog"
version = "0.0.2"
edition = "2021"
description = "an out-of-tree version of pgrx catalog safe bindings"
documentation = "https://docs.rs/pgrx-catalog"
readmd = "README.md"
repository = "https://github.com/usamoi/pgrx-catalog"
license = "MIT"
include = ["src", "README.md"]

[package.metadata.docs.rs]
features = ["pg14"]
targets = ["x86_64-unknown-linux-gnu"]
rustc-args = ["--cfg", "docsrs"]

[features]
default = []
pg12 = ["pgrx/pg12"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
pgrx = "~0.12"
paste = "1.0.14"
