[package]
name = "pgrx-catalog"
version = "0.3.0"
edition = "2024"
description = "An out-of-tree version of pgrx catalog safe bindings"
documentation = "https://docs.rs/pgrx-catalog"
readme = "README.md"
repository = "https://github.com/usamoi/pgrx-catalog"
license = "MIT"
include = ["src"]

[package.metadata.docs.rs]
features = ["pg14"]
targets = ["x86_64-unknown-linux-gnu"]
rustc-args = ["--cfg", "docsrs"]

[features]
default = []
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]

[dependencies]
pgrx = { version = ">=0.15, <0.16", default-features = false }
paste = "1.0.15"
