[package]
name = "pgrx_catalog_test"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "pgrx_embed_pgrx_catalog_test"
path = "./src/bin/pgrx_embed.rs"
required-features = ["pg_test"]

[features]
default = []
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "~0.12"
pgrx-catalog = { path = "../" }

[dev-dependencies]
pgrx-tests = "~0.12"
